Align fix notifications

--- a/core/app/assets/stylesheets/frontend.css.less
+++ b/core/app/assets/stylesheets/frontend.css.less
@@ -94,7 +94,7 @@ a.bookmarklet {
   > ul {
     display: none;
     position: absolute;
-    margin: 8px 0 0 0;
+    margin: 5px 0 0 0;
     right: 0;
     width: 240px;
     background: white;
